# ReminderBot

./: .gitignore  Makefile  README.md  config.py  config.yaml  database.db  main.py  pyproject.toml
src/: bot.py  config.py  keyboards.py  main.py  messages.py  models.py  services.py
