[tool.poetry]
name = "reminderbot"
version = "0.1.0"
description = "A bot for reminding important tasks"
authors = ["mohammadreza <mohammadrezasolo69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.0.1"
dynaconf = "^3.2.5"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
